--- a/_modules/TermTk/TTkCore/TTkTerm/inputkey.html
+++ b/_modules/TermTk/TTkCore/TTkTerm/inputkey.html
@@ -218,7 +218,7 @@
 <span class="sd">    .. py:attribute:: key</span>
 <span class="sd">        :type: str</span>
 
-<span class="sd">        the key</span>
+<span class="sd">        the input key</span>
 
 <span class="sd">    .. py:attribute:: code</span>
 <span class="sd">        :type: str</span>
