--- a/genindex.html
+++ b/genindex.html
@@ -193,6 +193,8 @@
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#X"><strong>X</strong></a>
+ | <a href="#Y"><strong>Y</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -217,6 +219,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.align">align() (TTkString method)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.AllButtons">AllButtons (TTkConstant.MouseKey attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.AltModifier">AltModifier (TTkConstant.KeyModifier attribute)</a>
 </li>
@@ -314,6 +318,10 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.evt">evt (TTkMouseEvent attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.executableColor">executableColor (TTkTheme attribute)</a>
 </li>
   </ul></td>
@@ -383,7 +391,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputkey.html#TermTk.TTkCore.TTkTerm.inputkey.TTkKeyEvent.key">key (TTkKeyEvent attribute)</a>
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.key">(TTkMouseEvent attribute)</a>
 </li>
+      </ul></li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.listwidget.html#TermTk.TTkWidgets.listwidget.TTkAbstractListItem.keyEvent">keyEvent() (TTkAbstractListItem method)</a>
 
       <ul>
@@ -415,6 +427,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.LayoutItemTypes.LayoutItem">LayoutItem (TTkConstant.LayoutItemTypes attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.LEFT_ALIGN">LEFT_ALIGN (TTkConstant.Alignment attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.LeftButton">LeftButton (TTkConstant.MouseKey attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.lineEditTextColor">lineEditTextColor (TTkTheme attribute)</a>
 </li>
@@ -455,6 +469,10 @@
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.menuButtonShortcutColor">menuButtonShortcutColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.MetaModifier">MetaModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.MidButton">MidButton (TTkConstant.MouseKey attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.MiddleButton">MiddleButton (TTkConstant.MouseKey attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkLayouts.gridlayout.html#TermTk.TTkLayouts.gridlayout.TTkGridLayout.minimumHeight">minimumHeight() (TTkGridLayout method)</a>
 </li>
@@ -727,10 +745,12 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.NoModifier">NoModifier (TTkConstant.KeyModifier attribute)</a>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.NoButton">NoButton (TTkConstant.MouseKey attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.KeyModifier.NoModifier">NoModifier (TTkConstant.KeyModifier attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.NONE">NONE (TTkConstant.Alignment attribute)</a>
 </li>
   </ul></td>
@@ -817,6 +837,8 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.radioButtonTextColorFocus">radioButtonTextColorFocus (TTkTheme attribute)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.raw">raw (TTkMouseEvent attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.widget.html#TermTk.TTkWidgets.widget.TTkWidget.removeWidget">removeWidget() (TTkWidget method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#TermTk.TTkCore.string.TTkString.replace">replace() (TTkString method)</a>
@@ -846,6 +868,8 @@
 </li>
       </ul></li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.Alignment.RIGHT_ALIGN">RIGHT_ALIGN (TTkConstant.Alignment attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.RightButton">RightButton (TTkConstant.MouseKey attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.RST">RST (TTkColor attribute)</a>
 </li>
@@ -910,6 +934,8 @@
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.tabSelectColor">tabSelectColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.tabSelectColorFocus">tabSelectColorFocus (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.tap">tap (TTkMouseEvent attribute)</a>
 </li>
       <li>
     TermTk
@@ -1596,6 +1622,10 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.LayoutItemTypes">TTkConstant.LayoutItemTypes (class in TermTk.TTkCore.constant)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseEvent">TTkConstant.MouseEvent (class in TermTk.TTkCore.constant)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey">TTkConstant.MouseKey (class in TermTk.TTkCore.constant)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.table.html#TermTk.TTkWidgets.Fancy.table.TTkFancyTable">TTkFancyTable (class in TermTk.TTkWidgets.Fancy.table)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.Fancy.tableview.html#TermTk.TTkWidgets.Fancy.tableview.TTkFancyTableView">TTkFancyTableView (class in TermTk.TTkWidgets.Fancy.tableview)</a>
@@ -1706,6 +1736,8 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.constant.html#TermTk.TTkCore.constant.TTkConstant.MouseKey.Wheel">Wheel (TTkConstant.MouseKey attribute)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkAbstract.abstractscrollview.html#TermTk.TTkAbstract.abstractscrollview.TTkAbstractScrollView.wheelEvent">wheelEvent() (TTkAbstractScrollView method)</a>
 
       <ul>
@@ -1719,6 +1751,22 @@
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.windowBorderColor">windowBorderColor (TTkTheme attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.windowBorderColorFocus">windowBorderColorFocus (TTkTheme attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="X">X</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.x">x (TTkMouseEvent attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Y">Y</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.TTkTerm.inputmouse.html#TermTk.TTkCore.TTkTerm.inputmouse.TTkMouseEvent.y">y (TTkMouseEvent attribute)</a>
 </li>
   </ul></td>
 </tr></table>
